# gnome-Authenticator

./: .editorconfig  .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  Cargo.toml  README.md  authenticator.doap  meson.build  meson_options.txt  rustfmt.toml
build-aux/: cargo.sh  com.belmoussaoui.Authenticator.Devel.json  com.belmoussaoui.AuthenticatorDevel.json  com.github.bilelmoussaoui.Authenticator.json
data/: com.belmoussaoui.Authenticator.SearchProvider.ini.in  com.belmoussaoui.Authenticator.SearchProvider.service.in  com.belmoussaoui.Authenticator.desktop.in.in  com.belmoussaoui.Authenticator.gresource.xml  com.belmoussaoui.Authenticator.gschema.xml.in  com.belmoussaoui.Authenticator.metainfo.xml.in.in  com.belmoussaoui.Authenticator.search-provider.ini  com.github.bilelmoussaoui.Authenticator.desktop.in.in  com.github.bilelmoussaoui.Authenticator.gresource.xml  com.github.bilelmoussaoui.Authenticator.metainfo.xml.in.in  data.json  meson.build  resources.gresource.xml
data/icons/: meson.build
data/resources/: style.css
data/resources/gtk/: style.css
data/resources/gtk/ui/: account_config.ui  account_row.ui  accounts_widget.ui  provider_image.ui  window.ui.in
data/resources/ui/: about_dialog.ui.in  account_add.ui  account_config.ui  account_details_page.ui  account_edit.ui  account_qrcode_page.ui  account_row.ui  accounts_list.ui  accounts_widget.ui  add_account.ui  camera.ui  editable_label.ui  editable_spin.ui  login.ui  password_widget.ui  preferences.ui  preferences.ui.in  preferences_camera_page.ui  preferences_password_page.ui  preferences_password_page.ui.in  preferences_provider_page.ui  preferences_providers_page.ui  provider_entry_row.ui  provider_image.ui  provider_page.ui  provider_row.ui  providers_all.ui  providers_dialog.ui  providers_list.ui  providers_list.ui.in  settings.ui.in  shortcuts.ui  window.ui  window.ui.in
favicon-scrapper/: Cargo.toml
favicon-scrapper/src/: error.rs  favicon.rs  format.rs  lib.rs  metadata.rs  scrapper.rs
favicon-scrapper/tests/parser/: data_base64.html  size.html  url_apple_touch_icon.html
hooks/: pre-commit.hook
migrations/2019-09-02-103718_create_accounts/: down.sql  up.sql
migrations/2019-09-02-123920_create_providers/: down.sql  up.sql
migrations/2019-09-02-132153_fill_providers/: data.json  down.sql  up.sql
migrations/2021-01-23-022153_steam_provider/: down.sql  up.sql
migrations/2022-12-27-101550_update_providers/: down.sql  up.sql
migrations/2022-12-27-120050_fix_nintendo_website/: down.sql  up.sql
old_po/: ca.po  da.po  nl.po  pl.po  pt.po  zh_CN.po
po/: LINGUAS  POTFILES.in  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  es.po  eu.po  fa.po  fi.po  fr.po  fur.po  gl.po  he.po  hr.po  hu.po  id.po  is.po  it.po  ja.po  ka.po  ko.po  lt.po  meson.build  ms.po  nb.po  nl.po  nn.po  oc.po  pa.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sl.po  sr.po  (+5 more)
src/: application.rs  authenticator-search-provider.py.in  config.rs.in  main.rs  meson.build  schema.rs  static_resources.rs.in  utils.rs  window_state.rs
src/Authenticator/: application.py.in
src/Authenticator/models/: accounts_manager.py
src/Authenticator/widgets/: provider_image.py  window.py
src/Authenticator/widgets/accounts/: add.py  edit.py  list.py  row.py
src/backup/: aegis.rs  andotp.rs  bitwarden.rs  freeotp.rs  freeotp_json.rs  google.rs  legacy.rs  mod.rs
src/backup/tests/: bitwarden.json  freeotp_json.json
src/helpers/: keyring.rs  mod.rs  qrcode.rs
src/models/: account.rs  account_sorter.rs  accounts.rs  algorithm.rs  database.rs  favicon.rs  i18n.rs  keyring.rs  mod.rs  object_wrapper.rs  otp.rs  otp_migration_uri.rs  otp_uri.rs  provider.rs  provider_sorter.rs  providers.rs  search_provider.rs  settings.rs  token.rs
src/widgets/: camera.rs  camera_paintable.rs  camera_row.rs  editable_label.rs  error_revealer.rs  mod.rs  preferences.rs  progress_icon.rs  url_row.rs  window.rs
src/widgets/accounts/: add.rs  details.rs  list.rs  mod.rs  qrcode_page.rs  qrcode_paintable.rs  row.rs
src/widgets/preferences/: camera_page.rs  mod.rs  password_page.rs  provider_page.rs  providers_page.rs  window.rs
src/widgets/providers/: all.rs  dialog.rs  dialog_row.rs  entry_row.rs  image.rs  list.rs  mod.rs  page.rs  row.rs
tests/favicon/: data_svg.html  meta_tag.html  url_apple_touch_icon_precomposed_link.html  url_fluid_icon.html  url_icon_link.html  url_shortcut_icon_link.html  url_with_port.html
tools/: export.py  twofactorauth2sql.py
tools/keyring-fetcher/: Cargo.toml
tools/keyring-fetcher/src/: main.rs
