[package]
edition = "2021"
name = "authenticator"
version = "4.1.6"

[dependencies]
adw = {package = "libadwaita", version = "0.2"}
anyhow = "1.0"
ashpd = {version = "0.4.0-alpha.1", features = ["pipewire", "gtk4"]}
binascii = "0.1"
diesel = {version = "1.4", features = ["sqlite", "r2d2"]}
diesel_migrations = {version = "1.4", features = ["sqlite"]}
gettext-rs = {version = "0.7", features = ["gettext-system"]}
gst = {package = "gstreamer", version = "0.19"}
gst4gtk = { package = "gst-plugin-gtk4", version = "0.9"}
gtk = {package = "gtk4", version = "0.5"}
gtk-macros = "0.3"
search-provider = "0.4"
hex = { version = "0.4.3", features = [ "serde" ] }
tracing = "0.1"
tracing-subscriber = "0.3"
once_cell = "1.9"
percent-encoding = "2.1"
qrcode = {version = "0.12", features = ["image"]}
rand = "0.8"
ring = "0.16"
rust-argon2 = "1.0"
oo7 = {version = "0.1.0-alpha.4", default-features = false, features = ["tokio_runtime", "tracing"]}
serde = "1.0"
serde_json = "1.0"
unicase = "2.6"
url = "2.2"
zbar-rust = "0.0"
scrypt = { version = "0.10", default-features = false }
aes-gcm = "0.9.4"
base64 = "0.13.0"
uuid = { version = "1.0", features = ["v4"] }
favicon-scrapper = {path = "./favicon-scrapper"}
image = {version = "0.24", default-features = false, features = ["png"]}
tokio = { version = "1.0", features = ["rt-multi-thread", "fs", "io-util"] }
prost = "0.10.4"
