[package]
edition = "2021"
name = "authenticator"
version = "4.2.0"

[dependencies]
adw = {package = "libadwaita", version = "0.3", features = ["v1_2"]}
anyhow = "1.0"
ashpd = {version = "0.4", default-features = false, features = ["pipewire", "gtk4", "tokio", "tracing"]}
binascii = "0.1"
diesel = {version = "2.0", features = ["sqlite", "r2d2"]}
diesel_migrations = {version = "2.0", features = ["sqlite"]}
gettext-rs = {version = "0.7", features = ["gettext-system"]}
gst = {package = "gstreamer", version = "0.20"}
gst4gtk = { package = "gst-plugin-gtk4", version = "0.10", features = ["wayland", "x11egl", "x11glx"]}
gtk = {package = "gtk4", version = "0.6", features = ["v4_10"]}
search-provider = {version = "0.5", default-features = false, features = ["tokio"]}
hex = { version = "0.4.3", features = [ "serde" ] }
tracing = "0.1"
tracing-subscriber = "0.3"
once_cell = "1.9"
percent-encoding = "2.1"
qrcode = {version = "0.12", features = ["image"]}
rand = "0.8"
ring = "0.16"
rust-argon2 = "1.0"
oo7 = {version = "0.1", default-features = false, features = ["tokio", "native_crypto", "tracing"]}
serde = "1.0"
serde_json = "1.0"
unicase = "2.6"
url = "2.2"
zbar-rust = "0.0"
scrypt = { version = "0.11", default-features = false }
aes-gcm = "0.10"
data-encoding = "2.3"
uuid = { version = "1.0", features = ["v4"] }
favicon-scrapper = {path = "./favicon-scrapper"}
image = {version = "0.24", default-features = false, features = ["png"]}
tokio = { version = "1.0", features = ["rt-multi-thread", "fs", "io-util"] }
prost = "0.11"
