[package]
edition = "2021"
name = "authenticator"
version = "4.3.1"
rust-version = "1.70"

[dependencies]
adw = {package = "libadwaita", version = "0.5", features = ["v1_4"]}
aes-gcm = "0.10"
anyhow = "1.0"
ashpd = {version = "0.6", default-features = false, features = ["pipewire", "gtk4", "tokio", "tracing"]}
data-encoding = "2.3"
diesel = {version = "2.0", features = ["sqlite", "r2d2"]}
diesel_migrations = {version = "2.0", features = ["sqlite"]}
favicon-scrapper = {path = "./favicon-scrapper"}
futures-channel = "0.3"
futures-executor = "0.3"
futures-util = "0.3"
gettext-rs = {version = "0.7", features = ["gettext-system"]}
gst = {package = "gstreamer", version = "0.21"}
gst_video = { package = "gstreamer-video", version = "0.21"}
gst4gtk = {package = "gst-plugin-gtk4", version = "0.11.0-alpha.1", features = ["wayland", "x11egl", "x11glx"]}
gtk = {package = "gtk4", version = "0.7", features = ["v4_10"]}
hex = {version = "0.4.3", features = ["serde"]}
image = {version = "0.24", default-features = false, features = ["png"]}
once_cell = "1.9"
oo7 = {version = "0.2", default-features = false, features = ["tokio", "native_crypto", "tracing"]}
percent-encoding = "2.1"
prost = "0.11"
qrcode = {version = "0.12", features = ["image"]}
rand = "0.8"
ring = "0.16"
rust-argon2 = {version = "2.0", default-features = false}
scrypt = {version = "0.11", default-features = false}
search-provider = {version = "0.6", default-features = false, features = ["tokio"]}
serde = "1.0"
serde_json = "1.0"
tokio = {version = "1.0", default-features = false, features = ["rt-multi-thread", "fs", "io-util"]}
tracing = {version = "0.1", default-features = false}
tracing-subscriber = {version = "0.3", default-features = false, features = ["fmt"]}
unicase = "2.6"
url = "2.2"
uuid = {version = "1.0", features = ["v4"]}
zbar-rust = "0.0"
zeroize = {version = "1", features = ["zeroize_derive"]}
