[package]
name = "favicon-scrapper"
version = "0.1.0"
edition = "2021"
autotests = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11"
percent-encoding = "2.1"
quick-xml = "0.22"
image = {version = "0.24", features = ["ico", "png"], default-features = false}
url = "2.2"
once_cell = "1.9"
log = "0.4"
base64 = "0.13.0"
svg_metadata = "0.4"
async-std = "1.11"
tokio = { version = "1.0", features = ["rt-multi-thread", "fs", "io-util", "macros"] }
