[package]
autotests = false
edition = "2021"
name = "favicon-scrapper"
version = "0.1.0"

[dependencies]
data-encoding = "2.3"
image = {version = "0.24", features = ["ico", "png"], default-features = false}
once_cell = "1.9"
percent-encoding = "2.1"
quick-xml = "0.30"
reqwest = "0.11"
svg_metadata = "0.4"
tokio = {version = "1.0", default-features = false, features = ["rt-multi-thread", "fs", "io-util", "macros"]}
tracing = {version = "0.1", default-features = false}
url = "2.2"
